Apache Tez Change Log
=====================

Release 0.6.3: Unreleased

INCOMPATIBLE CHANGES

ALL CHANGES:
  TEZ-2290. Scale memory for Default Sorter down to a max of 2047 MB if configured higher
  TEZ-2734. Add a test to verify the filename generated by OnDiskMerge
  TEZ-2687. ATS History shutdown happens before the min-held containers are released
  TEZ-2629. LimitExceededException in Tez client when DAG has exceeds the default max counters
  TEZ-2719. Consider reducing logs in unordered fetcher with shared-fetch option
  TEZ-2630. TezChild receives IP address instead of FQDN.

Release 0.6.2: Unreleased

INCOMPATIBLE CHANGES

ALL CHANGES:
  TEZ-2311. AM can hang if kill received while recovering from previous attempt.
  TEZ-2623. Fix module dependencies related to hadoop-auth.
  TEZ-2560. fix tex-ui build for maven 3.3+
  TEZ-2600. When used with HDFS federation(viewfs) ,tez will throw a error
  TEZ-2579. Incorrect comparison of TaskAttemptId
  TEZ-2549. Reduce Counter Load on the Timeline Server
  TEZ-2548. TezClient submitDAG can hang if the AM is in the process of shutting down.
  TEZ-2534. Error handling summary event when shutting down AM.
  TEZ-2511. Add exitCode to diagnostics when container fails.
  TEZ-2541. DAGClientImpl enable TimelineClient check is wrong.
  TEZ-2489. Disable warn log for Timeline ACL error when tez.allow.disabled.timeline-domains set to true.
  TEZ-2509. YarnTaskSchedulerService should not try to allocate containers if AM is shutting down.
  TEZ-1529. ATS and TezClient integration in secure kerberos enabled cluster
  TEZ-2483. Tez should close task if processor fail

Release 0.6.1: 2015-05-18

INCOMPATIBLE CHANGES

ALL CHANGES:
  TEZ-2437. FilterLinesByWord NPEs when run in Localmode
  TEZ-2057. tez-dag/pom.xml contains versions for dependencies.
  TEZ-2282. Delimit reused yarn container logs (stderr, stdout, syslog) with task attempt start/stop events