@@ -6,6 +6,7 @@ Release 0.6.3: Unreleased
 INCOMPATIBLE CHANGES
 
 ALL CHANGES:
+  TEZ-2732. DefaultSorter throws ArrayIndex exceptions on 2047 Mb size sort buffers
   TEZ-2290. Scale memory for Default Sorter down to a max of 2047 MB if configured higher
   TEZ-2734. Add a test to verify the filename generated by OnDiskMerge
   TEZ-2687. ATS History shutdown happens before the min-held containers are released
@@ -227,6 +228,7 @@ INCOMPATIBLE CHANGES
   TEZ-2552. CRC errors can cause job to run for very long time in large jobs.
 
 ALL CHANGES:
+  TEZ-2732. DefaultSorter throws ArrayIndex exceptions on 2047 Mb size sort buffers
   TEZ-2290. Scale memory for Default Sorter down to a max of 2047 MB if configured higher
   TEZ-2734. Add a test to verify the filename generated by OnDiskMerge
   TEZ-2687. ATS History shutdown happens before the min-held containers are released
